standardize response schemas and avoid array only responses